added website description

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Embark on your fitness journey with RS_thetics and unlock a world of opportunities to achieve your health and wellness goals. Whether you're a novice looking to get started or a seasoned fitness enthusiast aiming to elevate your performance, RS_thetics is your ultimate destination for transformative fitness education."
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
